# MLOps-Platform

./: .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  SPECS.md  llm-local  plan.md  pyproject.toml
.github/workflows/: static-validation.yml
config/: README.md  mlflow-genai.yaml  platform.yaml  runtime-catalog.yaml  validation-commands.yaml
config/dvc/: config.example
config/env/: litellm.env.example  mlflow.env.example  observation.env.example
config/litellm/: config.tracing.yaml
config/models/: desired-models.yaml
config/pipeline/: params.yaml
docs/: ARCHITECTURE.md  HARNESS.md  HARNESS_BACKLOG.md  README.md  TEST_MATRIX.md
docs/decisions/: 002-mlflow-dvc-s3-continuous-training.md  README.md
docs/product/: README.md  continuous-training.md  data-versioning.md  domains.md  experiment-tracking.md  mlflow-genai.md  model-release-lifecycle.md  model-releases.md  overview.md
docs/runbooks/: README.md  continuous-training-gpu-vm.md  release-promotion-vm.md
docs/stories/: backlog.md
docs/templates/: story.md
evaluation/: Dockerfile  docker-compose.yml
evaluation/scripts/: run_benchmark.py  run_lm_eval.sh
llm_local/: __init__.py  catalog.py  cli.py  compose.py  config_paths.py  validation.py
llm_local/models/: __init__.py  download.py  manage.py  paths.py  presets.py  registry.py
llm_local/ops/: __init__.py  preflight.py  (+1 more)
models/: README.md  convert.sh  presets.yaml
observation/: Dockerfile  docker-compose.yml
tests/: test_release_registry.py  test_training_pipeline.py  test_us004_train.py  test_us005_tracing.py
(+51 files in other folders)
